<resources>
    <string name="app_name">csProject</string>
    <string name="tutorial_1">Tell us your preferences</string>
    <string name="tutorial_2">Your events will be\nscheduled automatically</string>
    <string name="tutorial_3">LET\'S&#160;GET&#160;STARTED</string>
    <string name="server_client_id">944195913670-l96k2b8m86e50v8c0i9nnp1pglu6e37q.apps.googleusercontent.com</string>
    <string name="server_client_id_1">944195913670-gqtu4ev90krsftg1q6065sdmi1ongl7u.apps.googleusercontent.com</string>
    <string name="add_event_name">行程名稱</string>
    <string name="add_event_time">需要時間</string>
    <string name="add_event_hint">名稱</string>
    <string name="events_status">EVENTS&#160;STATUS</string>
    <string name="add_event_button_submit">送出</string>
    <string name="add_event_done_yes">好</string>
    <string name="add_event_done_no">不要</string>
    <string name="add_event_done_title">完成</string>
    <string name="add_event_done_content1">為你把</string>
    <string name="add_event_done_content2">(event name)</string>
    <string name="add_event_done_content3">安排在</string>
    <string name="add_event_done_content4">(event time)</string>
    <string name="calendar">CALENDAR</string>
    <string name="groups">GROUPS</string>
    <string name="log_out">LOG&#160;OUT</string>
    <string name="notification">NOTIFICATION</string>
    <string name="add">ADD</string>
    <string name="delete">DELETE</string>
    <string name="confirm_delete">確定要刪除事件嗎?</string>
    <string name="confirm_add">確定要添加事件嗎?</string>
    <string name="add_event_half_hr">半小時</string>
    <string name="add_event_1hr">1小時</string>
    <string name="add_event_2hr">2小時</string>
    <string name="add_event_3hr">3小時</string>
    <string name="add_event_4hr">4小時</string>
    <string name="add_event_5hr">5小時</string>
    <string name="add_event_all">全天</string>

    <string name="morning">早上</string>
    <string name="noon">中午</string>
    <string name="afternoon">下午</string>
    <string name="night">晚上</string>

    <string-array name="add_event_min">
        <item>0 分鐘</item>
        <item>15 分鐘</item>
        <item>30 分鐘</item>
        <item>45 分鐘</item>
    </string-array>

</resources>