<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:title="@string/calendar"/>
        <item
            android:id="@+id/nav_events"
            android:title="@string/events_status"
            app:actionLayout="@layout/drawer_counter"/>
        <item
            android:id="@+id/nav_groups"
            android:title="@string/groups"/>
        <item
            android:id="@+id/nav_notification"
            android:title="@string/notification"
            app:actionLayout="@layout/drawer_counter"/>
        <item
            android:id="@+id/nav_log_out"
            android:title="@string/log_out" />
    </group>
</menu>