<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/add_event_background"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingEnd="@dimen/dp_0"
        android:paddingStart="@dimen/dp_20">

        <ImageView
            android:id="@+id/img_green_check"
            android:layout_width="@dimen/dp_100"
            android:layout_height="@dimen/dp_100"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_60"
            android:contentDescription="@string/add_event_done_title"
            android:src="@drawable/green_check" />

        <TextView
            android:id="@+id/tv_add_event_done_title"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_100"
            android:layout_alignTop="@+id/img_green_check"
            android:layout_toEndOf="@+id/img_green_check"
            android:gravity="center_vertical"
            android:paddingEnd="@dimen/dp_20"
            android:paddingStart="@dimen/dp_20"
            android:text="@string/add_event_done_title"
            android:textSize="@dimen/sp_32" />

        <TextView
            android:id="@+id/tv_add_event_done_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="false"
            android:layout_alignParentStart="false"
            android:layout_alignStart="@+id/img_green_check"
            android:layout_below="@+id/img_green_check"
            android:paddingBottom="@dimen/dp_10"
            android:paddingTop="@dimen/dp_30"
            android:text="@string/add_event_done_content1"
            android:textSize="@dimen/sp_24" />

        <TextView
            android:id="@+id/tv_add_event_done_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="false"
            android:layout_alignParentStart="false"
            android:layout_alignStart="@+id/img_green_check"
            android:layout_below="@+id/tv_add_event_done_1"
            android:paddingBottom="@dimen/dp_10"
            android:paddingTop="@dimen/dp_10"
            android:text="@string/add_event_done_content2"
            android:textSize="@dimen/sp_24" />

        <TextView
            android:id="@+id/tv_add_event_done_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="false"
            android:layout_alignParentStart="false"
            android:layout_alignStart="@+id/img_green_check"
            android:layout_below="@+id/tv_add_event_done_2"
            android:paddingBottom="@dimen/dp_10"
            android:paddingTop="@dimen/dp_10"
            android:text="@string/add_event_done_content3"
            android:textSize="@dimen/sp_24" />

        <TextView
            android:id="@+id/tv_add_event_done_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="false"
            android:layout_alignParentStart="false"
            android:layout_alignStart="@+id/img_green_check"
            android:layout_below="@+id/tv_add_event_done_3"
            android:paddingBottom="@dimen/dp_10"
            android:paddingTop="@dimen/dp_10"
            android:text="@string/add_event_done_content4"
            android:textSize="@dimen/sp_24" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_gravity="end">

        <Button
            android:id="@+id/btn_add_event_done_no"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="@dimen/dp_80"
            android:layout_height="@dimen/dp_50"
            android:layout_marginEnd="30dp"
            android:background="@color/orange_grey"
            android:text="@string/add_event_done_no"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_20" />

        <Button
            android:id="@+id/btn_add_event_done_yes"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="@dimen/dp_80"
            android:layout_height="@dimen/dp_50"
            android:layout_marginEnd="40dp"
            android:background="@color/green_grey"
            android:text="@string/add_event_done_yes"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_20" />
    </LinearLayout>
</LinearLayout>
