<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/add_event_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingStart="@dimen/dp_50"
        android:paddingEnd="@dimen/dp_0">

        <TextView
            android:id="@+id/tv_add_event_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_48"
            android:text="@string/add_event_name"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_28" />

        <EditText
            android:id="@+id/et_add_event_name"
            android:layout_width="@dimen/dp_300"
            android:layout_height="@dimen/dp_60"
            android:layout_marginTop="@dimen/dp_24"
            android:ems="10"
            android:hint="@string/add_event_hint"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/tv_add_event_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_40"
            android:text="@string/add_event_time"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_28" />

        <Spinner
            android:id="@+id/add_event_hr"
            android:layout_width="@dimen/dp_200"
            android:layout_height="@dimen/dp_60"
            android:layout_marginTop="@dimen/dp_24" />

        <Spinner
            android:id="@+id/add_event_min"
            android:layout_width="@dimen/dp_200"
            android:layout_height="@dimen/dp_60"
            android:layout_marginTop="@dimen/dp_10" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_120"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_add_event_submit"
            android:layout_width="@dimen/dp_120"
            android:layout_height="@dimen/dp_60"
            android:layout_gravity="end"
            android:layout_marginBottom="@dimen/dp_0"
            android:layout_marginEnd="@dimen/dp_60"
            android:background="@color/orange_grey"
            android:text="@string/add_event_button_submit"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_24" />
    </LinearLayout>
</LinearLayout>
